# LLM-robustness

./: .gitignore  CODER_GEM_RULES.md  LLM  LLM Robustness to Encoding Artifacts  README.md  auth_debug_log  auth_debug_log.txt  build_cdd.py  docker-compose.temporal.yml  pyproject.toml
cdd_orchestrator/: README.md
cdd_orchestrator/cdd/: cli.py  config.py
cdd_orchestrator/cdd/llm/: client.py  schemas.py
cdd_orchestrator/cdd/orchestrator/: worker.py  workflows.py
cdd_orchestrator/cdd/orchestrator/activities/: llm_tasks.py
cdd_orchestrator/cdd/parsers/: repo_mapper.py
cdd_orchestrator/cdd/state/: db.py
cdd_orchestrator/tests/: test_llm_logic.py
scripts/: setup.sh
whisper-telemetry/: .env.example  README.md  requirements.txt  setup.py  whisper_v2.py
whisper-telemetry/scripts/: install.bat  start_silent.vbs
whisper-telemetry/src/: main.py
